<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?attr/colorPrimary"
    android:orientation="vertical"
    android:theme="@style/Theme.PlaylistMaker"
    tools:context=".settings.ui.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:foreground="?attr/selectableItemBackground"
        app:contentInsetStartWithNavigation="0dp"
        app:tint="?attr/colorOnPrimary"
        app:title="@string/settings"
        app:titleTextAppearance="@style/fragment_title"
        app:titleTextColor="?attr/colorOnPrimary" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_61"
        android:layout_marginTop="@dimen/dp_24"
        android:orientation="vertical">

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/dark_theme"
            style="@style/setting_layout_switch"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_61"
            android:padding="@dimen/dp_20"
            android:text="@string/night_mode" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_61"
        android:padding="@dimen/dp_20">

        <TextView
            style="@style/setting_layout_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <ImageView
            style="@style/settings_layout_image"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_61"
        android:padding="@dimen/dp_20">

        <TextView
            style="@style/setting_layout_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/support" />

        <ImageView
            style="@style/settings_layout_image"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/terms"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_61"
        android:padding="@dimen/dp_20">

        <TextView
            style="@style/setting_layout_items_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/agreement" />

        <ImageView
            style="@style/settings_layout_image"
            android:src="@drawable/ic_galochka" />

    </FrameLayout>

</LinearLayout>