<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_back"
    android:orientation="vertical"
    android:padding="@dimen/Padding_20">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_back">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:gravity="start"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </androidx.appcompat.widget.Toolbar>



    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Main_height_butt"
        android:layout_weight="@dimen/Main_weight_butt"
        android:backgroundTint="@color/white"
        android:text="@string/search"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        app:cornerRadius="@dimen/Rad_Butt_main"
        app:icon="@drawable/ic_search"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/Int_Butt_main"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_media"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Main_height_butt"
        android:layout_weight="@dimen/Main_weight_butt"
        android:backgroundTint="@color/white"
        android:text="@string/media"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        app:cornerRadius="@dimen/Rad_Butt_main"
        app:icon="@drawable/ic_library"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/Int_Butt_main"
        app:iconTint="@color/black" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="@dimen/Main_height_butt"
        android:layout_weight="@dimen/Main_weight_butt"
        android:backgroundTint="@color/white"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="@dimen/text_normal"
        app:cornerRadius="@dimen/Rad_Butt_main"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/Int_Butt_main"
        app:iconTint="@color/black" />


</LinearLayout>