<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".player.ui.TrackPlayerActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/leftBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/dp_25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/rightBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/dp_24" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar_dimensions"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_56"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/album_cover"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_24"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@+id/title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toEndOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_placeholder" />


    <TextView
        android:id="@+id/title"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_24"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/album_cover"
        tools:text="Yesterday (Remastered 2009) Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/artist_name"
        style="@style/TitleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_22"
        android:ellipsize="end"
        android:maxLines="1"
        android:singleLine="true"
        android:textSize="@dimen/text_14"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:text="Beatles" />

    <ImageButton
        android:id="@+id/play_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_30"
        android:background="@drawable/ic_play"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toBottomOf="@+id/artist_name" />

    <ImageView
        android:id="@+id/queue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@+id/leftBorder"
        app:layout_constraintTop_toTopOf="@+id/play_button"
        android:background="@drawable/ic_add" />

    <ImageView
        android:id="@+id/favorite_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/play_button"
        app:layout_constraintEnd_toStartOf="@+id/rightBorder"
        app:layout_constraintTop_toTopOf="@+id/play_button"
        android:background="@drawable/ic_like" />

    <TextView
        android:id="@+id/playing_time"
        style="@style/TrackPlayerActivityRightText"
        android:layout_marginTop="@dimen/dp_12"
        android:fontFamily="@font/ys_display_medium"
        android:gravity="center"
        android:text="0:00"
        app:layout_constraintEnd_toEndOf="@+id/play_button"
        app:layout_constraintStart_toStartOf="@+id/play_button"
        app:layout_constraintTop_toBottomOf="@+id/play_button" />

    <TextView
        android:id="@+id/duration_label"
        style="@style/TrackPlayerActivityLeftText"
        android:layout_marginStart="@dimen/dp_16"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@id/album_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playing_time" />

    <TextView
        android:id="@+id/album_label"
        style="@style/TrackPlayerActivityLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/album"
        app:layout_constraintBottom_toTopOf="@id/year_label"
        app:layout_constraintEnd_toStartOf="@id/album"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/duration_label" />

    <TextView
        android:id="@+id/year_label"
        style="@style/TrackPlayerActivityLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        app:layout_constraintBottom_toTopOf="@id/genre_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/album_label" />


    <TextView
        android:id="@+id/genre_label"
        style="@style/TrackPlayerActivityLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre"
        app:layout_constraintBottom_toTopOf="@id/country_label"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/year_label" />

    <TextView
        android:id="@+id/country_label"
        style="@style/TrackPlayerActivityLeftText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/country"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/duration_label"
        app:layout_constraintTop_toBottomOf="@id/genre_label" />

    <TextView
        android:id="@+id/duration"
        style="@style/TrackPlayerActivityRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:text="@string/no_data_available"
        app:layout_constraintBottom_toTopOf="@id/album"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playing_time" />

    <TextView
        android:id="@+id/album"
        style="@style/TrackPlayerActivityRightText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_30"
        android:ellipsize="end"
        android:gravity="end"
        android:singleLine="true"
        android:text="@string/no_data_available"
        app:layout_constraintBottom_toTopOf="@id/year"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintStart_toEndOf="@id/album_label"
        app:layout_constraintTop_toBottomOf="@id/duration" />


    <TextView
        android:id="@+id/year"
        style="@style/TrackPlayerActivityRightText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_available"
        app:layout_constraintBottom_toTopOf="@id/genre"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/album" />


    <TextView
        android:id="@+id/genre"
        style="@style/TrackPlayerActivityRightText"
        android:text="@string/no_data_available"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/country"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/year" />


    <TextView
        android:id="@+id/country"
        style="@style/TrackPlayerActivityRightText"
        android:layout_width="wrap_content"
        android:text="@string/no_data_available"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/duration"
        app:layout_constraintTop_toBottomOf="@id/genre" />


</androidx.constraintlayout.widget.ConstraintLayout>
